--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
 }
 
 a {
@@ -13,4 +18,13 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+@layer components {
+  .navbar{
+    @apply fixed top-0 left-0 z-50 h-[80px] w-full transition-all ease-in-out duration-1000
+  }
+  .navbaronscroll{
+    @apply fixed top-0 left-0 z-50 h-[80px] w-full bg-black bg-opacity-80 transition-all ease-in-out duration-1000
+  }
 }
